Styled convert button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,15 @@
 
     <Button
         android:id="@+id/btnConvert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="113dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="240dp"
+        android:backgroundTint="#FFE8E8"
+        android:fontFamily="@font/montserrat_regular"
         android:text="CONVERT"
+        android:textColor="#000000"
+        android:textSize="14dp"
+        app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -32,7 +37,7 @@
         android:layout_width="267dp"
         android:layout_height="58dp"
         android:ems="10"
-        android:hint="units in cm to be converted"
+        android:hint="50 cm"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/btnConvert"
         app:layout_constraintEnd_toEndOf="parent"
