--- a/app/src/main/res/layout/activity_convert_units.xml
+++ b/app/src/main/res/layout/activity_convert_units.xml
@@ -31,7 +31,7 @@
         android:fontFamily="@font/montserrat_regular"
         android:padding="10dp"
         android:text="From"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
+        app:layout_constraintBottom_toTopOf="@+id/txtFrom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.232"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +39,7 @@
         app:layout_constraintVertical_bias="0.969" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txtFrom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="236dp"
@@ -60,7 +60,7 @@
         android:fontFamily="@font/montserrat_regular"
         android:padding="10dp"
         android:text="To"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        app:layout_constraintBottom_toTopOf="@+id/txtTo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.617"
         app:layout_constraintStart_toEndOf="@+id/textView9"
@@ -73,25 +73,25 @@
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
         android:elevation="2mm"
-        app:layout_constraintEnd_toStartOf="@+id/textView8"
+        app:layout_constraintEnd_toStartOf="@+id/txtTo"
         app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toTopOf="@+id/textView8"
+        app:layout_constraintStart_toEndOf="@+id/txtFrom"
+        app:layout_constraintTop_toTopOf="@+id/txtTo"
         app:srcCompat="@drawable/arrow" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/txtTo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="2mm"
         android:fontFamily="@font/montserrat_light"
         android:text="M"
         android:textSize="50dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView7"
+        app:layout_constraintBottom_toBottomOf="@+id/txtFrom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.782"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView7"
+        app:layout_constraintTop_toTopOf="@+id/txtFrom"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -131,7 +131,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.121"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/txtFrom" />
 
     <TextView
         android:id="@+id/textView12"
