--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,134 +8,133 @@
     android:background="@drawable/bluebackground"
     android:backgroundTint="#80FFFFFF"
     android:backgroundTintMode="src_over"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:fillViewport="true">
 
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btnConvert"
+            android:layout_width="113dp"
+            android:layout_height="65dp"
+            android:backgroundTint="#fdf3ee"
+            android:fontFamily="@font/montserrat_regular"
+            android:text="CONVERT"
+            android:textColor="#000000"
+            android:textSize="14dp"
+            app:cornerRadius="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/editOriginalUnits"
+            app:layout_constraintHorizontal_bias="0.48"
+            app:layout_constraintStart_toStartOf="@+id/editOriginalUnits"
+            app:layout_constraintTop_toBottomOf="@+id/editOriginalUnits"
+            app:layout_constraintVertical_bias="0.103" />
+
+        <TextView
+            android:id="@+id/txtPrompt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:fontFamily="@font/montserrat_regular"
+            android:text="Enter units in cm to convert:"
+            android:textSize="15dp"
+            app:layout_constraintEnd_toEndOf="@+id/txtRightUnit"
+            app:layout_constraintHorizontal_bias="0.474"
+            app:layout_constraintStart_toStartOf="@+id/txtLeftUnit"
+            app:layout_constraintTop_toBottomOf="@+id/txtRightUnit" />
+
+        <TextView
+            android:id="@+id/conversion_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_regular"
+            android:text="Choose conversion type:"
+            android:textSize="15dp"
+            app:layout_constraintBottom_toTopOf="@+id/txtLeftUnit"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintVertical_bias="0.358" />
+
+        <EditText
+            android:id="@+id/editOriginalUnits"
+            android:layout_width="240dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="24dp"
+            android:ems="10"
+            android:fontFamily="@font/montserrat_light"
+            android:gravity="center"
+            android:hint="50 "
+            android:inputType="numberDecimal"
+            android:textSize="45dp"
+            app:layout_constraintEnd_toEndOf="@+id/txtRightUnit"
+            app:layout_constraintHorizontal_bias="0.458"
+            app:layout_constraintStart_toStartOf="@+id/txtLeftUnit"
+            app:layout_constraintTop_toBottomOf="@+id/txtPrompt" />
+
+        <TextView
+            android:id="@+id/txtLeftUnit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:fontFamily="@font/montserrat_light"
+            android:text="CM "
+            android:textSize="50dp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/txtRightUnit"
+            app:layout_constraintStart_toStartOf="@+id/conversion_type" />
+
+        <TextView
+            android:id="@+id/txtRightUnit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:fontFamily="@font/montserrat_light"
+            android:text="M"
+            android:textSize="50dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+            app:layout_constraintEnd_toEndOf="@+id/spinnerConvert"
+            app:layout_constraintTop_toBottomOf="@+id/spinnerConvert" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="316dp"
+            android:layout_height="118dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintBottom_toTopOf="@+id/conversion_type"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.506"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/sublogo" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="60dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="36dp"
+            app:layout_constraintBottom_toBottomOf="@+id/txtLeftUnit"
+            app:layout_constraintEnd_toStartOf="@+id/txtRightUnit"
+            app:layout_constraintHorizontal_bias="0.42"
+            app:layout_constraintStart_toEndOf="@+id/txtLeftUnit"
+            app:layout_constraintTop_toBottomOf="@+id/conversion_type"
+            app:layout_constraintVertical_bias="0.693"
+            app:srcCompat="@drawable/arrow" />
+
+        <Spinner
+            android:id="@+id/spinnerConvert"
+            android:layout_width="110dp"
+            android:layout_height="19dp"
+            app:layout_constraintBottom_toBottomOf="@+id/conversion_type"
+            app:layout_constraintEnd_toEndOf="@+id/imageView"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/conversion_type"
+            app:layout_constraintTop_toTopOf="@+id/conversion_type"
+            app:layout_constraintVertical_bias="0.0" />
 
 
-    <Button
-        android:id="@+id/btnConvert"
-        android:layout_width="113dp"
-        android:layout_height="65dp"
-        android:layout_marginBottom="124dp"
-        android:backgroundTint="#fdf3ee"
-        android:fontFamily="@font/montserrat_regular"
-        android:text="CONVERT"
-        android:textColor="#000000"
-        android:textSize="14dp"
-        app:cornerRadius="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editOriginalUnits" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/txtPrompt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="344dp"
-        android:fontFamily="@font/montserrat_regular"
-        android:text="Enter units in cm to convert:"
-        android:textSize="15dp"
-        app:layout_constraintHorizontal_bias="0.346"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="176dp"
-        android:fontFamily="@font/montserrat_regular"
-        android:text="Choose conversion type:"
-        android:textSize="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/txtLeftUnit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.301"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.538" />
-
-    <EditText
-        android:id="@+id/editOriginalUnits"
-        android:layout_width="240dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:fontFamily="@font/montserrat_light"
-        android:gravity="center"
-        android:hint="50 "
-        android:inputType="numberDecimal"
-        android:textSize="45dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtPrompt" />
-
-    <TextView
-        android:id="@+id/txtLeftUnit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:fontFamily="@font/montserrat_light"
-        android:text="CM "
-        android:textSize="50dp"
-        app:layout_constraintBottom_toTopOf="@+id/txtPrompt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.222"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/txtRightUnit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat_light"
-        android:text="M"
-        android:textSize="50dp"
-        app:layout_constraintBottom_toBottomOf="@+id/txtLeftUnit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.685"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtLeftUnit"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="406dp"
-        android:layout_height="147dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/sublogo" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="60dp"
-        android:layout_height="50dp"
-        app:layout_constraintBottom_toTopOf="@+id/txtPrompt"
-        app:layout_constraintEnd_toStartOf="@+id/txtRightUnit"
-        app:layout_constraintHorizontal_bias="0.347"
-        app:layout_constraintStart_toEndOf="@+id/txtLeftUnit"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.741"
-        app:srcCompat="@drawable/arrow" />
-
-    <Spinner
-        android:id="@+id/spinnerConvert"
-        android:layout_width="45dp"
-        android:layout_height="25dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.17"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
-        app:layout_constraintVertical_bias="1.0" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
