--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,124 +16,85 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
         <Button
-            android:id="@+id/btnConvert"
-            android:layout_width="113dp"
-            android:layout_height="65dp"
-            android:backgroundTint="#fdf3ee"
-            android:fontFamily="@font/montserrat_regular"
-            android:text="CONVERT"
+            android:id="@+id/btnSelectConversion"
+            android:layout_width="285dp"
+            android:layout_height="62dp"
+            android:backgroundTint="#e6f2f6"
+            android:fontFamily="@font/montserrat_semibold"
+            android:text="I want to select a conversion"
             android:textColor="#000000"
-            android:textSize="14dp"
+            android:textSize="10dp"
             app:cornerRadius="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/editOriginalUnits"
-            app:layout_constraintHorizontal_bias="0.48"
-            app:layout_constraintStart_toStartOf="@+id/editOriginalUnits"
-            app:layout_constraintTop_toBottomOf="@+id/editOriginalUnits"
-            app:layout_constraintVertical_bias="0.103" />
+            app:layout_constraintEnd_toEndOf="@+id/imageView3"
+            app:layout_constraintHorizontal_bias="0.535"
+            app:layout_constraintStart_toStartOf="@+id/imageView3"
+            app:layout_constraintTop_toBottomOf="@+id/btnRandom"
+            app:layout_constraintVertical_bias="0.111" />
+
+        <Button
+            android:id="@+id/btnRandom"
+            android:layout_width="285dp"
+            android:layout_height="62dp"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="#fdf3ee"
+            android:fontFamily="@font/montserrat_semibold"
+            android:text="I want a random conversion"
+            android:textColor="#000000"
+            android:textSize="10dp"
+            app:cornerRadius="20dp"
+            app:layout_constraintEnd_toEndOf="@+id/imageView3"
+            app:layout_constraintHorizontal_bias="0.535"
+            app:layout_constraintStart_toStartOf="@+id/imageView3"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <TextView
-            android:id="@+id/txtPrompt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:fontFamily="@font/montserrat_regular"
-            android:text="Enter units in cm to convert:"
-            android:textSize="15dp"
-            app:layout_constraintEnd_toEndOf="@+id/txtRightUnit"
-            app:layout_constraintHorizontal_bias="0.474"
-            app:layout_constraintStart_toStartOf="@+id/txtLeftUnit"
-            app:layout_constraintTop_toBottomOf="@+id/txtRightUnit" />
-
-        <TextView
-            android:id="@+id/conversion_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_regular"
-            android:text="Choose conversion type:"
-            android:textSize="15dp"
-            app:layout_constraintBottom_toTopOf="@+id/txtLeftUnit"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            app:layout_constraintVertical_bias="0.358" />
-
-        <EditText
-            android:id="@+id/editOriginalUnits"
-            android:layout_width="240dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="24dp"
-            android:ems="10"
-            android:fontFamily="@font/montserrat_light"
-            android:gravity="center"
-            android:hint="50 "
-            android:inputType="numberDecimal"
-            android:textSize="45dp"
-            app:layout_constraintEnd_toEndOf="@+id/txtRightUnit"
-            app:layout_constraintHorizontal_bias="0.458"
-            app:layout_constraintStart_toStartOf="@+id/txtLeftUnit"
-            app:layout_constraintTop_toBottomOf="@+id/txtPrompt" />
-
-        <TextView
-            android:id="@+id/txtLeftUnit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:fontFamily="@font/montserrat_light"
-            android:text="CM "
-            android:textSize="50dp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/txtRightUnit"
-            app:layout_constraintStart_toStartOf="@+id/conversion_type" />
-
-        <TextView
-            android:id="@+id/txtRightUnit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
-            android:fontFamily="@font/montserrat_light"
-            android:text="M"
-            android:textSize="50dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-            app:layout_constraintEnd_toEndOf="@+id/spinnerConvert"
-            app:layout_constraintTop_toBottomOf="@+id/spinnerConvert" />
+            android:id="@+id/textView"
+            android:layout_width="158dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/montserrat_black"
+            android:text="Welcome to Convert"
+            app:layout_constraintEnd_toEndOf="@+id/imageView3"
+            app:layout_constraintHorizontal_bias="0.451"
+            app:layout_constraintStart_toStartOf="@+id/imageView3"
+            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="316dp"
-            android:layout_height="118dp"
-            android:layout_marginTop="15dp"
-            app:layout_constraintBottom_toTopOf="@+id/conversion_type"
+            android:id="@+id/imageView3"
+            android:layout_width="321dp"
+            android:layout_height="306dp"
+            android:layout_marginTop="60dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.506"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/sublogo" />
+            app:srcCompat="@drawable/thinking" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="36dp"
-            app:layout_constraintBottom_toBottomOf="@+id/txtLeftUnit"
-            app:layout_constraintEnd_toStartOf="@+id/txtRightUnit"
-            app:layout_constraintHorizontal_bias="0.42"
-            app:layout_constraintStart_toEndOf="@+id/txtLeftUnit"
-            app:layout_constraintTop_toBottomOf="@+id/conversion_type"
-            app:layout_constraintVertical_bias="0.693"
-            app:srcCompat="@drawable/arrow" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="261dp"
+            android:layout_height="39dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/montserrat_semibold"
+            android:gravity="center"
+            android:text="A unit conversion application made to simplify your conversion needs"
+            app:layout_constraintEnd_toEndOf="@+id/textView"
+            app:layout_constraintHorizontal_bias="0.427"
+            app:layout_constraintStart_toStartOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-        <Spinner
-            android:id="@+id/spinnerConvert"
-            android:clickable="false"
-            android:layout_width="110dp"
-            android:layout_height="19dp"
-            app:layout_constraintBottom_toBottomOf="@+id/conversion_type"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/conversion_type"
-            app:layout_constraintTop_toTopOf="@+id/conversion_type"
-            app:layout_constraintVertical_bias="0.0" />
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/montserrat_regular"
+            android:text="Please select an option:"
+            app:layout_constraintEnd_toEndOf="@+id/textView2"
+            app:layout_constraintStart_toStartOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
